// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color and size 1`] = `
Object {
  "component": <svg
    className="a b c d e f g h i j k l m n"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:blue}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:18}
    .j{line-height:24px}
    .k{vertical-align:middle}
    .l{fill:blue}
    .m{height:18}
    .n{width:18}",
}
`;

exports[`render 1`] = `
Object {
  "component": <svg
    className="a b c d e f g h i j k l m n"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{color:black}
    .e{white-space:pre-wrap}
    .f{overflow-wrap:break-word}
    .g{-ms-hyphens:auto}
    .h{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .i{font-size:16}
    .j{line-height:24px}
    .k{vertical-align:middle}
    .l{fill:black}
    .m{height:16}
    .n{width:16}",
}
`;
